syntax = "proto3";

option java_multiple_files = true;
option java_package = "s2.shipping";
option java_outer_classname = "ShippingImpl";
package shipping;

/* Service2 Shipping management */

// Service Definition
service Shipping  {
	rpc checkShippingQuantity (stream ShippingQtyRequest) returns (ShippingQtyResponse) {}

	rpc updateLocation (stream UpdateLocRequest) returns (stream UpdateLocResponse) {}
}

// Define the messages
message ShippingQtyRequest {
	string productNo = 1;
	int32 shippingQty = 2;
}

message ShippingQtyResponse {
	string message = 1;
}

message UpdateLocRequest {
	string productIndivNo = 1;
}

message UpdateLocResponse {
	string locationNo = 1;
	int32 availNum = 2;
}